--- a/spec/clearsale.yml
+++ b/spec/clearsale.yml
@@ -1,5 +1,6 @@
-api_key: 'your api key'
-client_id: 'client id'
-client_secret: 'secret'
-endpoint: 'https://sandbox.clearsale.com.br/api'
+api_key: '5C3E91A7-D450-4977-A377-894C92A877C3'
+client_id: 'bomberg'
+client_secret: 'dJyXgGfwO3'
+test_mode: true
 analysis_location: 'USA'
+endpoint: 'https://sandbox.clearsale.com.br/api'
