--- a/spec/clearsale.yml
+++ b/spec/clearsale.yml
@@ -1,4 +1,4 @@
-api_key: '5C3E91A7-D450-4977-A377-894C92A877C3'
+api_key: 'your api key'
 client_id: 'bomberg'
 client_secret: 'dJyXgGfwO3'
 test_mode: true
