--- a/spec/fixtures/vcr_cassettes/request/authentication_token_request_auth.yml
+++ b/spec/fixtures/vcr_cassettes/request/authentication_token_request_auth.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://sandbox.clearsale.com.br/api/auth/login
     body:
       encoding: UTF-8
-      string: '{"Login":{"ApiKey":"your api key","ClientID":"client id","ClientSecret":"secret"}}'
+      string: '{"Login":{"ApiKey":"your api key","ClientID":"bomberg","ClientSecret":"dJyXgGfwO3"}}'
     headers:
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
@@ -37,12 +37,12 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 19 Apr 2017 17:12:20 GMT
+      - Tue, 06 Jun 2017 17:51:13 GMT
       Content-Length:
-      - '82'
+      - '83'
     body:
       encoding: UTF-8
-      string: '{"Token":{"Value":"GX7XALXD","ExpirationDate":"2017-04-20T16:20:03.923984+00:00"}}'
+      string: '{"Token":{"Value":"L5TJIQX4","ExpirationDate":"2017-06-07T16:24:05.7510375+00:00"}}'
     http_version: 
-  recorded_at: Wed, 19 Apr 2017 17:12:21 GMT
+  recorded_at: Tue, 06 Jun 2017 17:51:13 GMT
 recorded_with: VCR 3.0.3
